src/styles/prototypes/notification.scss
#notifications {
  position: fixed;
  top: 10px;
  left: 50%;
  transform: translateX(-50%);
  pointer-events: none;
  user-select: none;
}

.base-notification {
  display: flex;
  align-items: center;
  padding: 4px 15px 4px 10px;
  min-width: 100px;
  max-width: 180px;
  background: rgba(0, 0, 0, .8);
  opacity: 0;
  font-size: .8rem;
  font-weight: 600;
  transition: .3s;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  pointer-events: none;
  user-select: none;
  will-change: transform;
  &:first-child {
    opacity: 1;
  }
  &.success {
    color: #4db871;
  }
  &.error {
    color: #b84d4d;
  }
  > .base-icon {
    margin-right: 5px;
  }
  + .active {
    margin-top: 10px;
    opacity: 1;
  }
}

